--- a/app/templates/platform/navigation/_nav_player.html
+++ b/app/templates/platform/navigation/_nav_player.html
@@ -3,6 +3,7 @@
 
 {% if user.is_authenticated %}
     <li><a href="/transfer/">Transfer</a></li>
+    <li><a href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
     <li><a href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}</a></li>
     {% include 'platform/navigation/_nav.html'%}
     <li><a href="{% url 'profiles:my_carrier'%}">{% trans 'Kariera' %}</a></li>
