--- a/app/templates/platform/partials/_pagination.html
+++ b/app/templates/platform/partials/_pagination.html
@@ -45,7 +45,7 @@
 
     <div class="float-right">  
  
-            <span class="main-color "> {{ page_obj.elements }}</span> /  <span class="main-color">{{ page_obj.paginator.count }} </span>wszystkich wpisów
+            <span class="main-color "> {{ page_obj.elements }}</span> /  <span class="main-color">{{ page_obj.paginator.count }} </span>wszystkich {{ object_type|default:'wpisów' }}
 
     </div>
 
