--- a/backend/static/assets/css/tables.css
+++ b/backend/static/assets/css/tables.css
@@ -51,7 +51,7 @@ a.back-to-top i{
 
 #tables .player-header-card .card-body{
     
-    background-color:#ced4da;
+    /*background-color:#ced4da;*/
 }
 
 
@@ -123,7 +123,7 @@ section.tables {
         border-bottom:0px;
     }
     #tables .card-footer{
-        border-bottom:0px;
+        border-top:0px;
         padding: 0.5rem 1.25rem;
     }
     #tables .card .stats  {
