--- a/marketplace/templates/marketplace/announcement.html
+++ b/marketplace/templates/marketplace/announcement.html
@@ -3,12 +3,13 @@
     <div class="card-body">
       <h5 class="card-title">{{ object.club }}</h5>
       <p class="card-text">{{ object.body }}</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted">Odpowiedzi: {{ object.subscribers.count }}</small></p>
+       <p class="card-text"><small class="text-muted">{{ object.created_at|timesince }}</small></p>
     </div>
 
-    {% if user.is_player %}
-    <div class="card-footer">
-        {% announcement_response object %}
-    </div>
+    {% if user.is_player %} 
+        <div class="card-footer">
+            {% announcement_response object %}
+        </div>
     {% endif %}
   </div>
