--- a/profiles/templates/profiles/modals/_add_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_add_announcement_modal.html
@@ -3,14 +3,14 @@
 
 
 
-{% with id="addAnnouncementModal" title='Dodaj ogłoszenie' %}
+{% with id="addAnnouncementModal" title='Dodaj nowe ogłoszenie' %}
 
 
   <div class="modal fade" id="{{ id }}" tabindex="-1" role="dialog" aria-labelledby="{{ id }}Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="{{ id }}Label"><i class="icofont-contact-add"></i> {{ title }}</h5>
+          <h5 class="modal-title" id="{{ id }}Label">{{ title }}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true"><i class="icofont-close-circled main-color"></i></span>
           </button>
@@ -20,24 +20,34 @@
 
             {% if user.announcementuserquota.left <= 0 %}
                 Wykorzystałeś cały swój plan na oddawanie ogłoszeń w tym sezonie. 
+                <br><br>
+                Jeśli jesteś zainteresowaniem rozszerzeniem pakietu: <br>
+                <a class="btn-pm btn-sm" href="https://playmaker.pro/limit/">zwiększ limit tutaj</a>
+         
             {% else %}
-                Możesz jeszcze dodać <strong class="btn-pm btn-pm-sm">{{user.announcementuserquota.left}}</strong> ogłoszeń.
+
+                <small class="text-muted">
+                  Możesz jeszcze dodać <strong class="btn-pm btn-pm-sm">{{user.announcementuserquota.left}}</strong> ogłoszeń.
+                <br><br>
+                  Jeśli jesteś zainteresowaniem rozszerzeniem pakietu 
+                  <a class="" href="https://playmaker.pro/limit/">zwiększ limit</a>
+         
+                </small>
+
+
+              <form id="add-announcement-form" class="mt-3" enctype="multipart/form-data" action={% url 'marketplace:add_announcement' %} method="post">
+                  {% csrf_token %}
+                  <span id="add-announcement-form-body"> </span>
+
+                  <div class="modal-footer">
+                    <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Dodaj ogłoszenie o testach' %}</button>
+                  </div>
+              </form>
             {% endif %}
 
-            <br><br>
-            <div class="text-muted"> Jeśli jesteś zainteresowaniem rozszerzeniem pakietu 
-                <a class="" href="https://playmaker.pro/limit/">zwiększ limit</a>
-            </div>
-               
-          <form id="add-announcement-form" class="mt-3" enctype="multipart/form-data" action={% url 'marketplace:add_announcement' %} method="post">
-              {% csrf_token %}
-              <span id="add-announcement-form-body"> </span>
 
-              <div class="modal-footer">
-                <button class="btn-pm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Dodaj ogłoszenie o testach' %}</button>
-                <!--button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'PÓŹNIEJ' %}</button-->
-              </div>
-          </form>
+               
+
 
 
         </div>
